--- a/Fulfillment.Soap/Fulfillment.Soap.csproj
+++ b/Fulfillment.Soap/Fulfillment.Soap.csproj
@@ -40,6 +40,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net4\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -62,6 +70,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FulfillmentSdk\Apis\FulfillmentApi.cs" />
+    <Compile Include="FulfillmentSdk\Apis\FulfillmentOrdersApi.cs" />
+    <Compile Include="FulfillmentSdk\Apis\FulfillmentProductsApi.cs" />
+    <Compile Include="FulfillmentSdk\Configuration\FulfillmentConfiguration.cs" />
+    <Compile Include="FulfillmentSdk\Dtos\Line.cs" />
+    <Compile Include="FulfillmentSdk\Dtos\Order.cs" />
+    <Compile Include="FulfillmentSdk\Dtos\Product.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="Orders.asmx.cs">
       <DependentUpon>Orders.asmx</DependentUpon>
@@ -71,6 +86,7 @@
     <Compile Include="UnauthorizedSoapHeaderException.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -81,6 +97,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
