--- a/Fulfillment.Soap/bin/Fulfillment.Soap.dll.config
+++ b/Fulfillment.Soap/bin/Fulfillment.Soap.dll.config
@@ -10,5 +10,8 @@
       <compilation debug="true" targetFramework="4.0" />
 	  <customErrors mode="On"/>
     </system.web>
+	<appSettings>
+		<add key="FulfillmentUrl" value="http://meli-fulfillment-development.azurewebsites.net/api/"/>
+	</appSettings>
 
 </configuration>
