--- a/Fulfillment.Soap/packages.config
+++ b/Fulfillment.Soap/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" />
   <package id="RestSharp" version="105.2.3" targetFramework="net4" />
+  <package id="valueinjecter" version="3.1.1.2" targetFramework="net4" />
 </packages>
