--- a/Fulfillment.Soap/Web.config
+++ b/Fulfillment.Soap/Web.config
@@ -12,6 +12,7 @@
     </system.web>
 	<appSettings>
 		<add key="FulfillmentUrl" value="http://meli-fulfillment-development.azurewebsites.net/api/"/>
+		<add key="FindBySerialNumberPageSize" value="25"/>
 	</appSettings>
 
 </configuration>
