trimstart del serial number

--- a/Fulfillment.Soap/Web.config
+++ b/Fulfillment.Soap/Web.config
@@ -11,7 +11,7 @@
 	  <customErrors mode="On"/>
     </system.web>
 	<appSettings>
-		<add key="FulfillmentUrl" value="http://meli-fulfillment-development.azurewebsites.net/api/"/>
+		<add key="FulfillmentUrl" value="http://meli-fulfillment.azurewebsites.net/api/"/>
 		<add key="FindBySerialNumberPageSize" value="25"/>
 	</appSettings>
 
